--- a/src/less/quadrone/header.less
+++ b/src/less/quadrone/header.less
@@ -1,15 +1,24 @@
 .tidy5e-sheet.application:where(.quadrone.actor) {
-  --t5e-background-image: url('../../modules/tidy5e-sheet/images/banner-character.webp');
+  @banner-character: '../../modules/tidy5e-sheet/images/banner-character.webp';
+  --t5e-background-image: url('@{banner-character}');
 
   .sheet-header {
-    --t5e-initiative-image: url('../../modules/tidy5e-sheet/images/badge_init_dark.webp');
-    --t5e-ability-image: url('../../modules/tidy5e-sheet/images/badge_ability_dark.webp');
-    --t5e-ability-proficient-image: url('../../modules/tidy5e-sheet/images/badge_ability_dark_prof.webp');
-    --t5e-score-image: url('../../modules/tidy5e-sheet/images/badge_score_dark.webp');
-    --t5e-shield-image: url('../../modules/tidy5e-sheet/images/badge_ac_npc_dark.svg');
-    --t5e-inspiration-image-single: url('../../modules/tidy5e-sheet/images/badge_inspiration_single.webp');
-    --t5e-inspiration-image-stacked: url('../../modules/tidy5e-sheet/images/badge_inspiration_stacked.webp');
-    --t5e-level-image: url('../../modules/tidy5e-sheet/images/badge_level_dark.webp');
+    @badge_init_dark: '../../modules/tidy5e-sheet/images/badge_init_dark.webp';
+    --t5e-initiative-image: url('@{badge_init_dark}');
+    @badge_ability_dark: '../../modules/tidy5e-sheet/images/badge_ability_dark.webp';
+    --t5e-ability-image: url('@{badge_ability_dark}');
+    @badge_ability_dark_prof: '../../modules/tidy5e-sheet/images/badge_ability_dark_prof.webp';
+    --t5e-ability-proficient-image: url('@{badge_ability_dark_prof}');
+    @badge_score_dark: '../../modules/tidy5e-sheet/images/badge_score_dark.webp';
+    --t5e-score-image: url('@{badge_score_dark}');
+    @badge_ac_npc_dark: '../../modules/tidy5e-sheet/images/badge_ac_npc_dark.svg';
+    --t5e-shield-image: url('@{badge_ac_npc_dark}');
+    @badge_inspiration_single: '../../modules/tidy5e-sheet/images/badge_inspiration_single.webp';
+    --t5e-inspiration-image-single: url('@{badge_inspiration_single}');
+    @badge_inspiration_stacked: '../../modules/tidy5e-sheet/images/badge_inspiration_stacked.webp';
+    --t5e-inspiration-image-stacked: url('@{badge_inspiration_stacked}');
+    @badge_level_dark: '../../modules/tidy5e-sheet/images/badge_level_dark.webp';
+    --t5e-level-image: url('@{badge_level_dark}');
 
     --t5e-badge-border-color: var(--t5e-color-gold);
     --t5e-badge-text-color: var(--t5e-color-text-oninverse-default);
@@ -73,14 +82,16 @@
     background: var(--t5e-component-card-darker);
     @banner-npc-dark : '../../systems/dnd5e/ui/official/banner-npc-dark.webp';
     --t5e-sheet-header-bg: url('@{banner-npc-dark}');
-    --t5e-background-image: url('../../modules/tidy5e-sheet/images/denim065.png');
+    @denim065: '../../modules/tidy5e-sheet/images/denim065.png';
+    --t5e-background-image: url('@{denim065}');
     background: var(--t5e-background-image), var(--t5e-component-card-dark-darker);
     background-position: top center, center;
     background-repeat: repeat, no-repeat;
     background-size: auto, cover;
 
     &::before {
-      --t5e-background-image: url('../../modules/tidy5e-sheet/images/texture-gray-1.webp');
+      @texture-gray-1: '../../modules/tidy5e-sheet/images/texture-gray-1.webp';
+      --t5e-background-image: url('@{texture-gray-1}');
 
       content: '';
       background-image: var(--t5e-background-image);
@@ -92,7 +103,8 @@
     }
 
     &::after {
-      --t5e-background-image: url('../../modules/tidy5e-sheet/images/texture-gray-2.webp');
+      @texture-gray-2: '../../modules/tidy5e-sheet/images/texture-gray-2.webp';
+      --t5e-background-image: url('@{texture-gray-2}');
 
       content: '';
       background-image: var(--t5e-background-image);
@@ -125,14 +137,22 @@
     &.theme-light {
 
       .sheet-header {
-        --t5e-initiative-image: url('../../modules/tidy5e-sheet/images/badge_init_light.webp');
-        --t5e-ability-image: url('../../modules/tidy5e-sheet/images/badge_ability_light.webp');
-        --t5e-ability-proficient-image: url('../../modules/tidy5e-sheet/images/badge_ability_light_prof.webp');
-        --t5e-score-image: url('../../modules/tidy5e-sheet/images/badge_score_light.webp');
-        --t5e-shield-image: url('../../modules/tidy5e-sheet/images/badge_ac_npc_light.svg');
-        --t5e-inspiration-image-single: url('../../modules/tidy5e-sheet/images/badge_inspiration_single_light.webp');
-        --t5e-inspiration-image-stacked: url('../../modules/tidy5e-sheet/images/badge_inspiration_stacked_light.webp');
-        --t5e-level-image: url('../../modules/tidy5e-sheet/images/badge_level_light.webp');
+        @badge_init_light: '../../modules/tidy5e-sheet/images/badge_init_light.webp';
+        --t5e-initiative-image: url('@{badge_init_light}');
+        @badge_ability_light: '../../modules/tidy5e-sheet/images/badge_ability_light.webp';
+        --t5e-ability-image: url('@{badge_ability_light}');
+        @badge_ability_light_prof: '../../modules/tidy5e-sheet/images/badge_ability_light_prof.webp';
+        --t5e-ability-proficient-image: url('@{badge_ability_light_prof}');
+        @badge_score_light: '../../modules/tidy5e-sheet/images/badge_score_light.webp';
+        --t5e-score-image: url('@{badge_score_light}');
+        @badge_ac_npc_light: '../../modules/tidy5e-sheet/images/badge_ac_npc_light.svg';
+        --t5e-shield-image: url('@{badge_ac_npc_light}');
+        @badge_inspiration_single_light: '../../modules/tidy5e-sheet/images/badge_inspiration_single_light.webp';
+        --t5e-inspiration-image-single: url('@{badge_inspiration_single_light}');
+        @badge_inspiration_stacked_light: '../../modules/tidy5e-sheet/images/badge_inspiration_stacked_light.webp';
+        --t5e-inspiration-image-stacked: url('@{badge_inspiration_stacked_light}');
+        @badge_level_light: '../../modules/tidy5e-sheet/images/badge_level_light.webp';
+        --t5e-level-image: url('@{badge_level_light}');
 
         --t5e-badge-text-color: var(--t5e-color-text-default);
         --header-shadow: none;
